# product-line-auto-selection

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
_legacy/: field_rules_legacy.py  load_oh_legacy.py
deploy/: build_index.py
docs/: copilot-studio-topic-config.md  data-exploration-idg-isg-catalogs.md  deployment.md  design.md  design_v2.md  field-logic.md  review-2026-06-25.md  review-2026-06-26.md
output/: advanced_pn_tree.json  idg_pn_tree.json  isg_pn_tree.json  oh_products.json  oh_products_DCG.json  oh_products_IDG.json
prompts/: rerank.txt  rerank_der_tree.txt  rerank_hw.txt  rerank_v2.txt
scripts/: _copilot_primitives.py  aggregate_feedback.py  apply_slide2_fonts_pre_der_ppt.py  build_idg_tree.py  build_isg_tree.py  build_pre_der_pn_tree.py  convert_advanced_pn_to_md.py  convert_contract_to_md.py  convert_oh_to_md.py  convert_to_md.py  export_oh_products.py  generate_pre_der_ppt.py  process_pre_der_inputs.py  run_der_refinement_agent.py  run_pre_der_agent.py  validate_pn_tree.py
src/: confidence.py  feedback_aggregator.py  feedback_signal.py  feedback_store.py  field_rules.py  load_data.py  load_pn_tree.py  parse_voice_input.py  pre_der_shared.py  recall.py  recall_common.py  rerank.py
tests/: conftest.py  test_api.py  test_confidence.py  test_feedback_aggregator.py  test_feedback_signal.py  test_feedback_store.py  test_field_rules.py  test_load_data.py  test_load_pn_tree.py  test_parse_voice_input.py  test_pre_der_shared.py  test_recall.py  (+2 more)
(+28 files in other folders)
